@@ -1,1 +1,3 @@
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = packages include src
