@@ -14,3 +14,63 @@ RM=@RM@
 STOW=@STOW@
 INSTALL="@INSTALL@"
 WGET=@WGET@
+
+
+# The package build list, in order.
+gpg4win_build_list="@gpg4win_build_list@"
+
+
+# The default packages source directory.
+gpg4win_packages=@gpg4win_packages@
+
+
+# The path of each package.
+
+gpg4win_pkg_libgpg_error=@gpg4win_pkg_libgpg_error@
+gpg4win_pkg_libgpg_error_version=@gpg4win_pkg_libgpg_error_version@
+
+gpg4win_pkg_gpgme=@gpg4win_pkg_gpgme@
+gpg4win_pkg_gpgme_version=@gpg4win_pkg_gpgme_version@
+
+gpg4win_pkg_gnupg=@gpg4win_pkg_gnupg@
+gpg4win_pkg_gnupg_version=@gpg4win_pkg_gnupg_version@
+
+gpg4win_pkg_gpgol=@gpg4win_pkg_gpgol@
+gpg4win_pkg_gpgol_version=@gpg4win_pkg_gpgol_version@
+
+gpg4win_pkg_gpa=@gpg4win_pkg_gpa@
+gpg4win_pkg_gpa_version=@gpg4win_pkg_gpa_version@
+
+gpg4win_pkg_zlib=@gpg4win_pkg_zlib@
+gpg4win_pkg_zlib_version=@gpg4win_pkg_zlib_version@
+gpg4win_pkg_zlib_dev=@gpg4win_pkg_zlib_dev@
+gpg4win_pkg_zlib_src=@gpg4win_pkg_zlib_src@
+
+gpg4win_pkg_libpng=@gpg4win_pkg_libpng@
+gpg4win_pkg_libpng_version=@gpg4win_pkg_libpng_version@
+gpg4win_pkg_libpng_dev=@gpg4win_pkg_libpng_dev@
+gpg4win_pkg_libpng_src=@gpg4win_pkg_libpng_src@
+
+gpg4win_pkg_pkgconfig=@gpg4win_pkg_pkgconfig@
+gpg4win_pkg_pkgconfig_version=@gpg4win_pkg_pkgconfig_version@
+gpg4win_pkg_pkgconfig_src=@gpg4win_pkg_pkgconfig_src@
+
+gpg4win_pkg_glib=@gpg4win_pkg_glib@
+gpg4win_pkg_glib_version=@gpg4win_pkg_glib_version@
+gpg4win_pkg_glib_dev=@gpg4win_pkg_glib_dev@
+gpg4win_pkg_glib_src=@gpg4win_pkg_glib_src@
+
+gpg4win_pkg_atk=@gpg4win_pkg_atk@
+gpg4win_pkg_atk_version=@gpg4win_pkg_atk_version@
+gpg4win_pkg_atk_dev=@gpg4win_pkg_atk_dev@
+gpg4win_pkg_atk_src=@gpg4win_pkg_atk_src@
+
+gpg4win_pkg_pango=@gpg4win_pkg_pango@
+gpg4win_pkg_pango_version=@gpg4win_pkg_pango_version@
+gpg4win_pkg_pango_dev=@gpg4win_pkg_pango_dev@
+gpg4win_pkg_pango_src=@gpg4win_pkg_pango_src@
+
+gpg4win_pkg_gtk_=@gpg4win_pkg_gtk_@
+gpg4win_pkg_gtk__version=@gpg4win_pkg_gtk__version@
+gpg4win_pkg_gtk__dev=@gpg4win_pkg_gtk__dev@
+gpg4win_pkg_gtk__src=@gpg4win_pkg_gtk__src@
